# filekeepers-book-management

./: .env.example  .gitignore  DockerFile.api  Dockerfile.scraper  README.md  api_server_caller.py  docker-compose.yml  pytest.ini  requirements.txt  retry_script.sh  scraper_crontab  scrapper_caller.py  setup.py
.github/workflows/: pytest.yml
API/: DockerFile  __init__.py  deps.py  main.py  migrate.py  requirements.txt
API/v1/: __init__.py  books.py  keys.py  reports.py
scraper/: DockerFile  crontab  network_utils.py  requirements.txt  scraper.py  utils.py
shared/: .env.example  api_deps.py  config.py  models.py  pyproject.toml  setup.py  utils.py
tests/: conftest.py  test_api_auth.py  test_api_books.py  test_api_keys.py  test_api_reports.py  test_scraper_network_utils.py  test_scraper_scraper.py
