[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "1.0.0"
description = "Shared code for Books Scraper project"
authors = [
    {name = "Ratul Hasan", email = "wwwqweasd147@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "motor>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
]